// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component renders correctly with given blog props 1`] = `
<DocumentFragment>
  <article
    class="h-full flex flex-col border-2 border-secondary rounded-xl shadow-xl overflow-hidden"
  >
    <a
      href="/blogs/test-blog"
    >
      <img
        alt="placeholder"
        src="https://example.com/image.jpg"
      />
    </a>
    <div
      class="flex-1 p-6 bg-base-100"
    >
      <a
        href="/blogs/test-blog"
      >
        <h3
          class="text-2xl font-bold leading-tight py-4 text-accent"
        >
          Test Blog Title
        </h3>
      </a>
      <div
        class="font-bold"
      >
        Test Category
      </div>
      <p
        class="mt-4 mb-2"
      >
        Test Blog Summary
      </p>
      <p
        class="mt-2 mb-2 font-bold"
      >
        Authored By: John Doe
      </p>
      <p
        class="mt-2 mb-2 font-bold"
      >
        Authored On: January 1, 2023
      </p>
      <p
        class="mt-2 mb-2 font-bold text-secondary"
      >
        Published On: January 1, 2023, 12:00:00 AM UTC
      </p>
      <div
        class="flex justify-end"
      >
        <a
          class="inline-flex h-10 items-center justify-center font-medium text-accent"
          href="/blogs/test-blog"
        >
          Read More →
        </a>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Card Component renders default image if heroImage.url is not provided 1`] = `
<DocumentFragment>
  <article
    class="h-full flex flex-col border-2 border-secondary rounded-xl shadow-xl overflow-hidden"
  >
    <a
      href="/blogs/test-blog"
    >
      <img
        alt="placeholder"
        src="/default.jpeg"
      />
    </a>
    <div
      class="flex-1 p-6 bg-base-100"
    >
      <a
        href="/blogs/test-blog"
      >
        <h3
          class="text-2xl font-bold leading-tight py-4 text-accent"
        >
          Test Blog Title
        </h3>
      </a>
      <div
        class="font-bold"
      >
        Test Category
      </div>
      <p
        class="mt-4 mb-2"
      >
        Test Blog Summary
      </p>
      <p
        class="mt-2 mb-2 font-bold"
      >
        Authored By: John Doe
      </p>
      <p
        class="mt-2 mb-2 font-bold"
      >
        Authored On: January 1, 2023
      </p>
      <p
        class="mt-2 mb-2 font-bold text-secondary"
      >
        Published On: January 1, 2023, 12:00:00 AM UTC
      </p>
      <div
        class="flex justify-end"
      >
        <a
          class="inline-flex h-10 items-center justify-center font-medium text-accent"
          href="/blogs/test-blog"
        >
          Read More →
        </a>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Card Component renders null if blog slug is not provided 1`] = `<DocumentFragment />`;
